[package]
name = "autocorrelation_window"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[dependencies.vox_box]
version = "0.2.1"

[dependencies]
piston = "*"
piston_window = "*"
piston2d-gfx_graphics = "*"
piston2d-graphics = "*"
portaudio = "*"
gfx_text = "*"
rustfft = "*"
num = "*"
bounded-spsc-queue = "*"

